# music-manager

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  dprint.json
.cargo/: config.toml
.github/workflows/: rust.yml
.sqlx/: query-02732ffffbee8494b79a8b465994d9b06d7ca39c4a64b699458eeec414ec90ff.json  query-1f1d5b2ea005972cc5036a5248efadb7521f41dcf3ad85fdda3d60c7671ae2c2.json  query-291fb595284c33f32e176fb93770f53c76a431d9d3102ff8ee68773b6e07e03e.json  query-2bf2dae5e6b03c1ae27aceb07363151d3d3d6b0282f05a693629d71afd778cd9.json  query-32ed4722f4801244316f5b644432368ec04c21ff8729890ab31b6be28dc6ece1.json  query-3880db3fc41453304942e7a8066f0e9a30fbc8cfcf5cf5482b262783d7f3fb38.json  query-3a852efb9133d5f4b5187f993d82554d4716a032b9e6bdff48654f02cb6b283a.json  query-3bbe2b4c3a233f908542b81a28aad18ee280a4ffba5fe90fbfe8c560e5f28455.json  query-461f15e5e2d3f23201d4e253f7311df5ce782eddf9294a592669dab9e207b972.json  query-7427fa6a7a9f7add3a52c5cc50dbcae7c0798770d59d3b6442ae0f9ea28db347.json  query-8659c878d7a278c86e3f90e38adb66c8a94ef53dbdf7b86c5a38226f62fb18b7.json  query-893f61e993fd937e521bd9d06e4679f7992e95d6f696d89af724877eec71f884.json  query-9f91377b15dcada93c0373c4d75a80b2ba63ccd405cae97f171fd699b4531dc3.json  query-a207f507785b62bcd98aee92c55214725ff2084b5e0ca237ec3e3c190d0c9472.json  query-a64bed910fbd73c55461626092cd5f8979cea9d45c7fe8b60a2d71461a7afc22.json  query-c8516d1eb184567f71538e22d2f6472945001726afa76f34d021eb24edabf4a3.json  query-c9273e3082a656e0702000487b9e93cf11ff38bdec6c194570ffede24176fcc0.json  query-cb3ac42e71aeaab358c751bc591638703b29ac53ed947ba44295a5f5eb5260d2.json  query-d0af9e11aa8e18189f6aba05c3668123533998f12894eef199db956880c171b0.json  query-d134b0f4fa5123c2e5f3b8ea681c656a6d42261113d7e8fce9b737099fe9f183.json  query-f03c4ac1c41059aedad8cea3c372b193548b555cb4eb06c5b11b9918fee5e7e7.json  query-f299a649f280900b2357ca436fe3b1629e02b7f48cb7b472f9b6c69cc337d051.json  query-f52e9d0d54afe6c58a6e8c1b3f8ab3b8488d6b34c2a125fca15584285314f116.json  query-f581d71894c1fe18b65651b7f6af903e32142e0e9fdcf2e59471da5e8344c4dd.json  query-f6e0066dc3ecb62b392cea6e6ea7d08b7f26b0c3a91a1cd87d5b83b8bcc874de.json  query-f9a771892f8cc75ee3ab088ec5fc6ad77ad05c5840d4bf147e874452aa1c4599.json  query-fd57845e823439392d034e1460fcee72cfa0941583785031487900e1f6f50322.json
app/: Cargo.toml  config.toml
app/frontend/: index.html
app/frontend/src/: main.ts
app/migrations/: 20250118204816_remove_parent_path_from_songs.down.sql  20250725224500_add_mood_to_songs.down.sql
app/src/: db.rs  lib.rs
data/: bumm.m4a  goose.flac  goose.opus
frontend/: .gitignore  biome.json  bun.lockb  dprint.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/plugins/: icons.ts
frontend/src/: App.svelte  app.css  state.ts
frontend/src/api/: album.ts  directory.ts  jobs.ts  song.ts
frontend/src/attachments/: viewport.ts
frontend/src/components/: Breadcrumbs.svelte  Button.svelte  Checkbox.svelte  Event.svelte  Icon.svelte  Image.svelte  ListBox.svelte  Logo.svelte  Meter.svelte  Modal.svelte  Page.svelte  Popover.svelte  Progress.svelte  TextInput.svelte
metadata/: Cargo.toml
metadata/src/: album.rs  cover_art.rs  file.rs  song.rs  tags.rs
migrations/: 20241217195114_create_songs.down.sql  20241217195114_create_songs.up.sql  20241220010050_add_dirs.down.sql  20241220010050_add_dirs.up.sql  20250118204816_remove_parent_path_from_songs.up.sql  20250725224500_add_mood_to_songs.up.sql  20250905175005_add_uuid_to_songs.down.sql  20250905175005_add_uuid_to_songs.up.sql  20250905175827_use_uuid_as_primary_key_in_songs.sql  20250909151516_add_date_columns_to_songs.down.sql  20250909151516_add_date_columns_to_songs.up.sql  20250916122132_add_display_name_column_directories.down.sql  20250916122132_add_display_name_column_directories.up.sql  20260115231518_add_reference_to_directory_in_songs.down.sql  20260115231518_add_reference_to_directory_in_songs.up.sql  20260115233850_enforce_directory_references_in_songs.down.sql  20260115233850_enforce_directory_references_in_songs.up.sql
src/: api.rs  app.rs  args.rs  config.rs  db.rs  events.rs  fs.rs  jobs.rs  lib.rs  logging.rs  main.rs  metadata.rs  migration.rs  organize.rs  paths.rs  state.rs  task.rs  tasks.rs  utils.rs
src/api/: albums.rs  cover_art.rs  directories.rs  fs.rs  info.rs  jobs.rs  organize.rs  songs.rs  tasks.rs  ui.rs
src/app/: api.rs  events.rs  mod.rs  state.rs  ui.rs  utils.rs
src/db/: directories.rs  songs.rs
src/jobs/: scan_songs.rs
src/metadata/: album.rs  cover_art.rs  file.rs  item.rs  mod.rs  song.rs  tags.rs
src/state/: fs.rs  job.rs
src/tasks/: scan_songs.rs
src/utils/: mod.rs  paths.rs  status.rs
templates/: config.toml
(+117 files in other folders)
