[package]
name = "muusik"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ape = "0.5.0"
axum = { version = "0.7.9", features = ["macros", "tracing", "ws"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6.3"
config = "0.15.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
futures = "0.3.31"
handlebars = { version = "6.2.0", features = ["rust-embed"] }
hyper = "1.5.2"
hyper-util = "0.1.10"
id3 = { version = "1.16.0", features = ["tokio"] }
image = { version = "0.25.5", features = ["serde"] }
lewton = "0.10.2"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
lofty = "0.22.1"
metaflac = "0.2.7"
mime_guess = "2.0.5"
mp4ameta = "0.11.0"
num_enum = "0.7.3"
regex = "1.11.1"
reqwest = "0.12.9"
rust-embed = "8.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "sqlite", "time", "json"] }
sysinfo = "0.33.1"
thiserror = "2.0.8"
time = {version = "0.3.37", features = ["serde", "serde-well-known", "macros", "serde-human-readable"] }
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.22"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = {version= "0.3.19", features = ["env-filter"]}
walkdir = "2.5.0"
