[package]
name = "muusik"
version = "0.1.0"
build = "build.rs"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "tracing", "ws"] }
clap = { version = "4.5.23", features = ["derive", "env"] }
color-eyre = "0.6.3"
config = "0.15.0"
directories = "6.0.0"
dotenvy = "0.15.7"
fs_extra = "1.3.0"
futures = "0.3.31"
handlebars = { version = "6.2.0", features = ["rust-embed"] }
hyper = "1.5.2"
hyper-util = "0.1.10"
image = { version = "0.25.5", features = ["serde"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
lofty = "0.22.4"
log = "0.4.27"
mime_guess = "2.0.5"
num_enum = "0.7.3"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = "0.12.9"
rust-embed = "8.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "sqlite", "time", "json"] }
sysinfo = "0.33.1"
time = { version = "0.3.41", features = ["serde-human-readable"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.19"
toml_edit = "0.22.22"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
walkdir = "2.5.0"

async-trait = "0.1.89"
ignore = "0.4.25"
sanitize-filename = { git = "https://github.com/kardeiz/sanitize-filename.git", rev = "a2808090c9c2a962e64d8ddc503b18981e8d6c57" }
scraper = "0.23.1"
thiserror = "2.0.8"
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.18"
tower = "0.5.2"
ts-rs = { version = "12.0.0", features = ["uuid-impl"] }

[dependencies.uuid]
version = "1.17.0"
features = [
	"v4",
	"serde",
]

[dev-dependencies]
tempfile = "3.20.0"
test-log = { version = "0.2", features = ["trace"] }
